# dvstar_thesis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bench.py  bench_job.sh  benchmarking.py  benchmarking_vis.ipynb  buildvlmcs.py  join_kmc_benchmarks.py  kmc-vlmc.def  out.txt  requirements.txt  requirements_apptainer.txt  run_tests.bash  thesis.def  vis.ipynb  vis.py  visualiser.py  vlmc-from-kmers.def  vlmc_analysis.ipynb
.github/workflows/: cmake.yml
include/: calc_dists.hpp  cluster_container.hpp  get_cluster.hpp  global_aliases.hpp  kmer.hpp  parallel.hpp  parser.hpp  read_in_kmer.hpp  utils.hpp  vlmc_container.hpp
include/distances/: dvstar.hpp
include/optimize_cmp_kmers/: b_tree.hpp  b_tree_layout.hpp  calc_dists.hpp  cluster_container.hpp  eytzinger_array.hpp  get_cluster.hpp  get_trees.hpp  global_aliases.hpp  parallel.hpp  parallellize.hpp  parser.hpp  read_in_kmer.hpp  utils.hpp  veb_array.hpp  veb_tree.hpp  vlmc_container.hpp  vlmc_template.hpp
include/optimize_cmp_kmers/distances/: dvstar.hpp  dvstar_old.hpp  kl_divergence.hpp
include/vlmc_containers/: b_tree_array.hpp  eytzinger_array.hpp  veb_array.hpp  veb_tree.hpp
include/vlmc_from_kmers/: bic.hpp  build_vlmc.hpp  cli_helper.hpp  context_archive.hpp  dvstar.hpp  estimators.hpp  kmc_runner.hpp  kmer.hpp  kmers_per_level.hpp  negative_log_likelihood.hpp  sequencing_adjustment.hpp  similarity_pruning.hpp  support_pruning.hpp
kmc_vlmc/src/: bic.hpp  build_vlmc.cpp  build_vlmc.hpp  cli_helper.hpp  kmc_runner.hpp  kmer.hpp  kmer_container.hpp  kmers_per_level.hpp  negative_log_likelihood.hpp  similarity_pruning.hpp  support_pruning.hpp
kmc_vlmc/tests/: CMakeLists.txt  benchmarks.cpp  count_correctness_tests.cpp  kmer_tests.cpp  method_benchmarks.cpp  method_regression.cpp  negative_log_likelihood_tests.cpp  read_helper.hpp  regression_tests.cpp  similarity_pruning_tests.cpp  support_pruning_tests.cpp
src/: build_vlmc.cpp  calc_dists.cpp
tests/: CMakeLists.txt  NC_001497.2.fa  NC_028367.1.fa  NC_045512.2.fa  benchmarks.cpp  calc_dists_tests.cpp  count_correctness_tests.cpp  dvstar_tests.cpp  kmer_tests.cpp  method_benchmarks.cpp  method_regression.cpp  negative_log_likelihood_tests.cpp  our_dvstar_tests.cpp  read_helper.hpp  similarity_pruning_tests.cpp  support_pruning_tests.cpp
tests/our_tests/: b_tree_alt_tests.cpp  b_tree_array_tests.cpp  b_tree_layout_tests.cpp  b_tree_tests.cpp  calc_dists_tests.cpp  cluster_container_tests.cpp  dev.cpp  dvstar_tests.cpp  eytzinger_arr_tests.cpp  get_cluster_tests.cpp  parallel_tests.cpp  parser_tests.cpp  read_in_kmer_tests.cpp  time_benchmark.cpp  veb_array_tests.cpp  veb_tree_tests.cpp  vlmc_container_tests.cpp
